# stereo

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
StereoTuner/: CMakeLists.txt  Makefile  StereoTuner.glade  main.cpp
applications_scripts/: depthPlots.py  gps_to_NED.py
applications_scripts/precision-recall/: main.py  precision-recall.py
applications_scripts/precision-recall/scripts/extra/: README.md
applications_scripts/stereoTuner/: StereoTuner.glade  main.cpp
src/clustering/: CMakeLists.txt  README.md  package.xml
src/clustering/cfg/: accumulator.cfg
src/clustering/launch/: pcl_obstacle_detector.launch
src/clustering/src/: pcl_obstacle_detector.cpp
src/clustering_cnn/: CMakeLists.txt  package.xml
src/clustering_cnn/src/: clustering_cnn.cpp
src/clustering_ptcloud/: .gitignore  CMakeLists.txt  package.xml
src/clustering_ptcloud/cfg/: params.cfg
src/clustering_ptcloud/launch/: pcl_obstacle_detector.launch
src/clustering_ptcloud/src/: pcl_obstacle_detector.cpp
src/custom_libraries/: CMakeLists.txt  package.xml
src/custom_libraries/frames/: frames.yaml
src/custom_libraries/include/custom_libraries/: convert_to_NED.hpp
src/custom_libraries/src/: convert_to_NED.cpp
src/custom_msgs/: CMakeLists.txt  topics.md
src/custom_msgs/msg/: Object.msg  TorqueedoData.msg  gnssGGA.msg
src/darknet_ros/darknet_ros/config/: yolov3-boats.yaml
src/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
src/darknet_ros/darknet_ros/launch/: yolo_v3.launch
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
src/launch/: CMakeLists.txt  clustering_cnn.launch  clustering_ptcloud.launch  package.xml  stereo_system.launch
src/lidar_pcl/: CMakeLists.txt  package.xml
src/lidar_pcl/cfg/: clusterer.cfg
src/lidar_pcl/launch/: pcl_obstacle_detector.launch
src/lidar_pcl/src/: pcl_obstacle_detector.cpp
src/navigation_data/: CMakeLists.txt  package.xml
src/navigation_data/src/: gps_to_NED.py  nav_data.py
src/spinnaker_sdk_camera_driver/launch/: acquisition.launch
src/spinnaker_sdk_camera_driver/params/: stereo_camera_example.yaml  test_params.yaml
src/spinnaker_sdk_camera_driver/src/: camera.cpp  capture.cpp  subscriber_node.cpp  subscriber_nodelet.cpp
src/stereo_image_proc/: CMakeLists.txt  nodelet_plugins.xml
src/stereo_image_proc/cfg/: Disparity.cfg
src/stereo_image_proc/launch/: stereo_image_proc.launch
src/stereo_image_proc/src/nodelets/: _disparity.cpp  disparityStereoBM.cpp  disparity_stereoBM.cpp  point_cloud2.cpp
src/stereo_image_proc/src/nodes/: stereo_image_proc.cpp
