<?xml version="1.0"?>
<package format="2">
    <name>clustering_ptcloud</name>
    <version>0.0.0</version>
    <description>Filtering and clustering point cloud from stereo camera package</description>
    <maintainer email="stereo@love.no">almost done</maintainer>
    <license>Highly secret</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <depend>roscpp</depend>
    <depend>libpcl-all</depend>
</package>
