<?xml version="1.0"?>
<package format="2">
    <name>lidar_pcl</name>
    <version>0.0.0</version>
    <description>The lidar_pcl package</description>

    <maintainer email="oystein.hovind@revolve.no">Øystein Hovind</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>libpcl-all</depend>
   
</package>
